Use Files.readString() where possible